--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
   "type": "project",
   "require": {
     "php": ">=7.0.0",
+    "barryvdh/laravel-cors": "^0.9.2",
     "laravel/framework": "5.4.*",
     "laravel/tinker": "~1.0",
     "wikimedia/composer-merge-plugin": "^1.3.1"
